--- a/meu-primeiro-projeto/src/app/app.component.html
+++ b/meu-primeiro-projeto/src/app/app.component.html
@@ -1,8 +1,20 @@
-{{ valor }}
+<!--
+   Componente Angular
+ -->
+
+<!-- {{ valor }}
 <app-title *ngIf="destruir"></app-title>
 <br /><br />
 <button type="button" (click)="destruirComponent()">
   Destruir componente
 </button>
 <button type="button" (click)="adicionar()">Adicionar</button>
+<router-outlet></router-outlet> -->
+
+<!--
+  Data Binding
+ -->
+
+<app-data-binding></app-data-binding>
 <router-outlet></router-outlet>
+
