--- a/meu-primeiro-projeto/src/app/app.component.html
+++ b/meu-primeiro-projeto/src/app/app.component.html
@@ -15,6 +15,10 @@
   Data Binding
  -->
 
-<app-data-binding></app-data-binding>
-<router-outlet></router-outlet>
+<!-- <app-data-binding></app-data-binding>
+<router-outlet></router-outlet> -->
+
+<!--
+  Diretiva Angular
+ -->
 
