--- a/meu-primeiro-projeto/src/app/diretivas-estruturais/diretivas-estruturais.component.html
+++ b/meu-primeiro-projeto/src/app/diretivas-estruturais/diretivas-estruturais.component.html
@@ -8,6 +8,12 @@
 <p *ngIf="conditionClick">true</p>
 <p *ngIf="!conditionClick">false</p>
 <button type="button" (click)="onClick()">Clicar</button>
-<br><br>
-<!--  -->
+<br /><br />
+<!-- Insere os valores de acordo com a leitura do array -->
 <h1>NgFor</h1>
+<ul type="none">
+  <li *ngFor="let item of list; let i = index" (click)="onClickEventList(i)">
+    {{ i }} - {{ item.nome }} - idade = {{ item.idade }}
+  </li>
+</ul>
+<button type="button" (click)="onClickAddList()">Clicar</button>
