--- a/meu-primeiro-projeto/src/app/app.component.html
+++ b/meu-primeiro-projeto/src/app/app.component.html
@@ -21,5 +21,8 @@
 <!--
   Diretiva Angular
  -->
-<app-diretivas-estruturais></app-diretivas-estruturais>
+  <!-- Diretivas estruturais -->
+<!-- <app-diretivas-estruturais></app-diretivas-estruturais> -->
+  <!-- Diretivas de Atributos -->
+<app-diretivas-atributos></app-diretivas-atributos>
 <router-outlet></router-outlet>
