--- a/meu-primeiro-projeto/src/app/diretivas-atributos/diretivas-atributos.component.html
+++ b/meu-primeiro-projeto/src/app/diretivas-atributos/diretivas-atributos.component.html
@@ -1,2 +1,4 @@
 <!-- Utilizado para mudar valores de classes -->
 <h1 [ngClass]="{ active: valor, disabled: !valor }">NgClass</h1>
+<br /><br />
+<h1 [ngStyle]="{ height: heightpx, background: backgroundColor }">NgStyle</h1>
