--- a/meu-primeiro-projeto/src/app/app.component.html
+++ b/meu-primeiro-projeto/src/app/app.component.html
@@ -22,7 +22,21 @@
   Diretiva Angular
  -->
   <!-- Diretivas estruturais -->
-<!-- <app-diretivas-estruturais></app-diretivas-estruturais> -->
+    <!-- <app-diretivas-estruturais></app-diretivas-estruturais> -->
+
   <!-- Diretivas de Atributos -->
-<app-diretivas-atributos></app-diretivas-atributos>
-<router-outlet></router-outlet>
+    <!-- <app-diretivas-atributos>
+      <h1>NgContent funcionando</h1>
+      <hr>
+    </app-diretivas-atributos>
+    <router-outlet></router-outlet> -->
+  <!-- Pipes -->
+    <!-- <app-diretivas-atributos></app-diretivas-atributos>
+    <router-outlet></router-outlet> -->
+
+<!--
+  Modulos
+ -->
+
+
+
