--- a/meu-primeiro-projeto/src/app/app.component.html
+++ b/meu-primeiro-projeto/src/app/app.component.html
@@ -21,6 +21,7 @@
 <!--
   Diretiva Angular
  -->
+
   <!-- Diretivas estruturais -->
     <!-- <app-diretivas-estruturais></app-diretivas-estruturais> -->
 
@@ -38,5 +39,12 @@
   Modulos
  -->
 
-<app-new-component></app-new-component>
+<!-- <app-new-component></app-new-component>
+<router-outlet></router-outlet> -->
+
+<!--
+  Comunicação entre componentes
+ -->
+
+
 
