--- a/projeto-pratico-1/src/styles.scss
+++ b/projeto-pratico-1/src/styles.scss
@@ -1,6 +1,8 @@
+// Imports
 @import "./dist/scss/variable.scss";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
 
+// Resets
 * {
   border: 0;
   margin: 0;
@@ -10,6 +12,20 @@
 
 body {
   background: $primary-background-color;
+}
+
+ul {
+  list-style: none;
+}
+
+textarea:focus,
+input:focus,
+button {
+  outline: none;
+}
+
+button {
+  cursor: pointer;
 }
 
 //Classes
