--- a/projeto-pratico-1/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/projeto-pratico-1/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -1,13 +1,18 @@
-<section>
-  <ul>
-    <li>
-      <input type="checkbox">
-      <input type="text">
-      <button>
-        <img src="../../../../../assets/icons/icon-trash.svg" alt="Excluir">
+<section [ngClass]="{ loading: !taskList.length }">
+  <ul *ngIf="taskList.length">
+    <li *ngFor="let item of taskList; let i = index">
+      <input type="checkbox" [(ngModel)]="item.checked" />
+      <input type="text" [(ngModel)]="item.task" />
+      <button (click)="deleteTaskList(i)">
+        <img src="../../../../../assets/icons/icon-trash.svg" alt="Excluir" />
       </button>
     </li>
   </ul>
 </section>
-<app-todo-input-add-itens></app-todo-input-add-itens>
-<app-todo-button-delete-all></app-todo-button-delete-all>
+<app-todo-input-add-itens
+  (emitItemTaskList)="setEmitTaskList($event)"
+></app-todo-input-add-itens>
+<app-todo-button-delete-all
+  *ngIf="taskList.length"
+  (click)="deleteAllTaskList()"
+></app-todo-button-delete-all>
