--- a/meu-primeiro-projeto/src/app/app.component.html
+++ b/meu-primeiro-projeto/src/app/app.component.html
@@ -38,7 +38,6 @@
 <!--
   Modulos
  -->
-
 <!-- <app-new-component></app-new-component>
 <router-outlet></router-outlet> -->
 
@@ -50,8 +49,14 @@
     <button type="button" (click)="add()">Adicionar</button>
     <router-outlet></router-outlet> -->
 <!-- Output -->
-<ng-template [ngIf]="getDados">
+<!-- <ng-template [ngIf]="getDados">
   <h1>{{ getDados.nome }}</h1>
   <h2>{{ getDados.idade }}</h2>
 </ng-template>
-<app-output (enviarDados)="setDados($event)"></app-output>
+<app-output (enviarDados)="setDados($event)"></app-output> -->
+
+<!--
+  Serviços
+ -->
+ <app-food-list></app-food-list>
+ <router-outlet></router-outlet>
