--- a/meu-primeiro-projeto/src/app/shared/food-add/food-add.component.html
+++ b/meu-primeiro-projeto/src/app/shared/food-add/food-add.component.html
@@ -1,2 +1,2 @@
-<input type="text" #inputValue />
+<input type="text" #inputValue [(ngModel)]="valor" />
 <button type="button" (click)="listAddItem(inputValue.value)">Add Item</button>
