Revert "update service"
This reverts commit d1c2e748f844bc4d4f1fcc4462852fbd3f555085.

--- a/meu-primeiro-projeto/src/app/shared/food-add/food-add.component.html
+++ b/meu-primeiro-projeto/src/app/shared/food-add/food-add.component.html
@@ -1,2 +1,2 @@
-<input type="text" #inputValue [(ngModel)]="valor" />
+<input type="text" #inputValue />
 <button type="button" (click)="listAddItem(inputValue.value)">Add Item</button>
