--- a/meu-primeiro-projeto/src/app/shared/food-list/food-list.component.html
+++ b/meu-primeiro-projeto/src/app/shared/food-list/food-list.component.html
@@ -1,3 +1,3 @@
-<li *ngFor="let item of foodList">
-  {{ item }}
+<li *ngFor="let item of foodList" type="none">
+  {{item.id}} - {{ item.nome }}
 </li>
