Observable + http-put e delete
Aprendendo a editar e deletar valores com requisição http via api!

--- a/meu-primeiro-projeto/src/app/shared/food-list/food-list.component.html
+++ b/meu-primeiro-projeto/src/app/shared/food-list/food-list.component.html
@@ -1,3 +1,9 @@
 <li *ngFor="let item of foodList" type="none">
-  {{item.id}} - {{ item.nome }}
+  {{ item.id }} -
+  <input
+    type="text"
+    [(ngModel)]="item.nome"
+    (keyup.enter)="foodListEdit(item.nome, item.id)"
+  />
+  <button type="button" (click)="foodListDelete(item.id)">Deletar</button>
 </li>
