--- a/meu-primeiro-projeto/src/app/app.component.html
+++ b/meu-primeiro-projeto/src/app/app.component.html
@@ -58,6 +58,12 @@
 <!--
   Serviços
  -->
- <app-food-add></app-food-add>
+ <!-- <app-food-add></app-food-add>
  <app-food-list></app-food-list>
+ <router-outlet></router-outlet> -->
+
+<!--
+  Forms
+ -->
+ <app-forms></app-forms>
  <router-outlet></router-outlet>
