--- a/meu-primeiro-projeto/src/app/forms/forms.component.html
+++ b/meu-primeiro-projeto/src/app/forms/forms.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm">
+<form #form="ngForm" (ngSubmit)="submitForm(form)">
   <label>
     Nome:
     <input
@@ -8,7 +8,7 @@
       [ngModel]="nome.value"
       required
     />
-    <span *ngIf="nome.invalid && (nome.dirty && nome.touched)"> Invalid </span>
+    <span *ngIf="nome.invalid && nome.dirty && nome.touched"> Invalid </span>
   </label>
   <br /><br />
   <!-- Se é valido ou não -->
@@ -60,6 +60,8 @@
       {{ item.comida }}
     </option>
   </select>
+  <br /><br />
+  <button type="submit" [disabled]="form.invalid">Enviar Dados</button>
 </form>
 <br /><br />
 {{ form.value | json }}
