--- a/meu-primeiro-projeto/src/app/forms/forms.component.html
+++ b/meu-primeiro-projeto/src/app/forms/forms.component.html
@@ -1,67 +1,6 @@
-<form #form="ngForm" (ngSubmit)="submitForm(form)">
-  <label>
-    Nome:
-    <input
-      type="text"
-      name="nome"
-      #nome="ngModel"
-      [ngModel]="nome.value"
-      required
-    />
-    <span *ngIf="nome.invalid && nome.dirty && nome.touched"> Invalid </span>
-  </label>
-  <br /><br />
-  <!-- Se é valido ou não -->
-  {{ nome.valid }}
-  <!-- Se ele foi "sujo", foi modificado ou não -->
-  {{ nome.dirty }}
-  <!-- Se ele foi tocado/selecionado ou não -->
-  {{ nome.touched }}
-  <!-- {{ form.valid }} -->
-  <!--
-    valid
-    dirty
-    touched
-   -->
-  <br /><br />
-  <label>
-    Masculino:
-    <input type="radio" name="sexo" value="Masculino" ngModel />
-  </label>
-  <br /><br />
-  <label>
-    Feminino:
-    <input type="radio" name="sexo" value="Feminino" ngModel />
-  </label>
-  <br /><br />
-  <label>
-    Outros:
-    <input type="radio" name="sexo" value="Outros" ngModel />
-  </label>
-  <br /><br />
-  <label>
-    Angular:
-    <input type="checkbox" name="angular" ngModel />
-  </label>
-  <br /><br />
-  <label>
-    Vue:
-    <input type="checkbox" name="vue" ngModel />
-  </label>
-  <br /><br />
-  <label>
-    React:
-    <input type="checkbox" name="react" ngModel />
-  </label>
-  <br /><br />
-  <select name="comidas" ngModel>
-    <option value="" selected>Selecione um alimento</option>
-    <option *ngFor="let item of listComida" [value]="item.comida">
-      {{ item.comida }}
-    </option>
-  </select>
-  <br /><br />
-  <button type="submit" [disabled]="form.invalid">Enviar Dados</button>
+<form #form="ngForm">
+  <label>Nome:</label>
+  <input type="text" name="nome" ngModel />
 </form>
-<br /><br />
-{{ form.value | json }}
+
+<p>{{ form.value | json }}</p>
