--- a/meu-primeiro-projeto/src/app/forms/forms.component.html
+++ b/meu-primeiro-projeto/src/app/forms/forms.component.html
@@ -12,6 +12,15 @@
   <br /><br />
   <label>Outros</label>
   <input type="radio" name="sexo" value="Outros" ngModel />
+  <br /><br />
+  <label>Angular</label>
+  <input type="checkbox" name="angular" ngModel />
+  <br /><br />
+  <label>Vue</label>
+  <input type="checkbox" name="vue" ngModel />
+  <br /><br />
+  <label>React</label>
+  <input type="checkbox" name="react" ngModel />
 </form>
 
 <p>{{ form.value | json }}</p>
