--- a/meu-primeiro-projeto/src/app/forms/forms.component.html
+++ b/meu-primeiro-projeto/src/app/forms/forms.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm">
+<form #form="ngForm" (ngSubmit)="submitForm(form)">
   <label>
     Nome:
     <input
@@ -44,6 +44,8 @@
       {{ item.comida }} - R${{ item.preco }}
     </option>
   </select>
+  <br /><br />
+  <input type="submit" value="Enviar" [disabled]="form.invalid" />
 </form>
 
 <p>{{ form.value | json }}</p>
